[package]
name = "aifc"
version = "0.6.0"
description = "Reader and writer for the AIFF and AIFF-C audio format"
repository = "https://github.com/karip/aifc"
license = "MIT OR Apache-2.0"
keywords = ["audio", "aiff", "codec"]
categories = ["multimedia::audio", "multimedia::encoding"]
edition = "2021"
exclude = [
    "toisto-aiff-test-suite/*",
]

[dependencies]
audio-codec-algorithms = "0.7.0"

[dev-dependencies]
criterion = { version = "0.5.1" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
id3 = "1.16.0"

[[bench]]
name = "aifc_benchmark"
harness = false

