[package]
name = "aifc"
version = "0.7.0"
description = "Reader and writer for the AIFF and AIFF-C audio format"
repository = "https://github.com/karip/aifc"
license = "MIT OR Apache-2.0"
keywords = ["audio", "aiff", "codec"]
categories = ["multimedia::audio", "multimedia::encoding"]
edition = "2024"
rust-version = "1.87.0"
exclude = [
    "toisto-aiff-test-suite/*",
]

[dependencies]
audio-codec-algorithms = "0.8.0"

[dev-dependencies]
criterion = { version = "0.8.2" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
id3 = "1.16.4"

[[bench]]
name = "aifc_benchmark"
harness = false

